# next2025.1

./: .gitattributes  .gitignore  README.md  pyproject.toml
next2025/aula03/: desafio_fastapi.py  fastapi_01.py  fastapi_02.py  fastapi_03_query_params.py  fastapi_04_path_params.py  fastapi_05_request_body.py  fastapi_06_response_body.py
next2025/aula04/: app.py  crud.py  v1.py
next2025/aula05/: crud.py  main.py  raw_sql.py
next2025/aula05/dao/: user.py
next2025/aula05/dependencies/: user_dao.py
next2025/aula06/: dependency.py  yield.py
next2025/aula09/: app.py  middlewares.py
next2025/aula09/api/: __init__.py  auth.py  users.py
next2025/aula09/dao/: user.py
next2025/aula09/models/: base.py  user.py
next2025/aula09/utils/: db_utils.py  jwt_utils.py  password_utils.py
next2025/aula09/views/: login.html  login.py
next2025/aula10/: Dockerfile  desafio.Dockerfile  main.py
next2025/aula11/: app.py  index.html
